fix paths, docs
